--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "next": "14.2.14",
     "react": "^18",
+    "react-day-picker": "^9.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
