--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@supabase/supabase-js": "^2.45.4",
     "next": "14.2.14",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-day-picker": "^9.2.0",
     "react-dom": "^18"
